--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,27 +18,24 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          HOST="${{ vars.DEPLOY_HOST }}"
+          HOST="${{ vars.DEPLOY_HOST || '75.119.135.119' }}"
           PORT="${{ vars.DEPLOY_PORT || '22' }}"
           FP_EXPECT="${{ vars.DEPLOY_HOST_FINGERPRINT }}"
-          if [[ -z "${HOST}" || -z "${FP_EXPECT}" ]]; then
-            echo "DEPLOY_HOST or DEPLOY_HOST_FINGERPRINT is empty."
+          if [[ -z "${FP_EXPECT}" ]]; then
+            echo "DEPLOY_HOST_FINGERPRINT is empty – set it in Settings → Secrets and variables → Actions → Variables."
             exit 1
           fi
-          FP_ACTUAL="$(ssh-keyscan -p "${PORT}" -t ed25519 "${HOST}" 2>/dev/null \
-            | ssh-keygen -lf - | awk '{print $2}')"
+          FP_ACTUAL="$(ssh-keyscan -p "${PORT}" -t ed25519 "${HOST}" 2>/dev/null | ssh-keygen -lf - | awk '{print $2}')"
           echo "Expected: ${FP_EXPECT}"
           echo "Actual:   ${FP_ACTUAL}"
-          [[ "${FP_ACTUAL}" == "${FP_EXPECT}" ]] || {
-            echo "❌ Host key fingerprint mismatch!"; exit 1;
-          }
+          [[ "${FP_ACTUAL}" == "${FP_EXPECT}" ]] || { echo "❌ Host key fingerprint mismatch!"; exit 1; }
           mkdir -p ~/.ssh
           ssh-keyscan -p "${PORT}" "${HOST}" >> ~/.ssh/known_hosts
 
       - name: Deploy on server
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ vars.DEPLOY_HOST }}
+          host: ${{ vars.DEPLOY_HOST || '75.119.135.119' }}
           username: ${{ vars.DEPLOY_USER || 'deploy' }}
           port: ${{ vars.DEPLOY_PORT || '22' }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
